--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,4 +1,4 @@
-<div class="stores-maps container">
+<div class="stores-maps container js-stores-maps-toggle-wrap">
   <h1 class="hide-visually">Stores</h1>
 
   <%# Contain filters, map/list toggle, and listings %>
