--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -13,12 +13,12 @@
         <h2 class="stores-maps__hdr">Stores A-Z</h2>
 
         <%# Filters %>
-        <%# [CHRIS TODO] need to add aria-controls to the 'Apply' button that points to the filters count %>
+        <%# [CHRIS TODO] need to add `aria-owns` to the 'Apply' button that points to the filters count %>
         <%# <button class="btn btn--main btn--main-alt2">Filter</button> %>
         <%# Filters %>
 
         <%# List/map toggle %>
-        <button class="stores-maps__toggle btn btn--main btn--main-alt4 btn--main-compact-icon js-stores-maps-toggle-btn">
+        <button class="stores-maps__toggle btn btn--main btn--main-alt4 btn--main-compact-icon js-stores-maps-toggle-btn" aria-owns="stores-maps-toggle-listing-detail, stores-maps-toggle-map">
           <span class="hide-visually">View <span class="js-stores-maps-toggle-btn__txt">map</span></span>
           <span class="icon icon--map2 icon--lrg" aria-hidden="true"></span>
           <span class="icon icon--list icon--lrg" aria-hidden="true"></span>
@@ -40,7 +40,7 @@
     <%# //Filters & list/map toggle button %>
 
     <%# Stores list %>
-    <div class="stores-maps__list-detail js-stores-maps-toggle-listing-detail">
+    <div class="stores-maps__list-detail js-stores-maps-toggle-listing-detail" id="stores-maps-toggle-listing-detail">
       <dl class="stores-list">
         <% @stores.each do |letter, stores| %>
 
@@ -109,7 +109,7 @@
   <%# //Contain filters, map/list toggle, and listings %>
 
   <%# Map %>
-  <div class="stores-maps__map map-micello js-stores-maps-toggle-map">
+  <div class="stores-maps__map map-micello js-stores-maps-toggle-map" id="stores-maps-toggle-map">
     <%= render partial: 'shared/map', locals: {store_id: nil, interactive: true} %>
   </div>
   <%# //Map %>
