--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -132,7 +132,7 @@ Global stylesheet
 @import "partials/modules/drop-down-menu";
 @import "partials/modules/stores-maps";
 @import "partials/modules/filters";
-@import "partials/modules/hours";
+@import "partials/modules/pill";
 
   /* Modules -> Widgets */
   @import "partials/modules/widgets/accordion";
