--- a/app/assets/stylesheets/partials/base/_tables.scss
+++ b/app/assets/stylesheets/partials/base/_tables.scss
@@ -24,7 +24,11 @@ table {
 	}
 
 	/* Caption */
-	caption {@extend h2};
+	caption {
+    @include font-size($font-size-lrg);
+    font-weight: bold;
+    @include to-rem(margin-bottom, $spacing-base);
+  }
 
 	/* Cell header */
 	th {font-weight: bold;}
