--- a/app/views/layouts/hero.html.erb
+++ b/app/views/layouts/hero.html.erb
@@ -12,7 +12,7 @@
         <div class="hero__inner container container--narrow">
           <span class="hero__icon icon icon--hours icon--spacing-lrg" aria-hidden="true"></span>
           <h1 class="hero__hdr"><%= @hero.heading %></h1>
-          <p class="hero__txt"><%= @hero.text %></p>
+          <%= content_tag :p, @hero.text, class: 'hero__txt' if @hero.text %>
         </div>
 
       </div>
