deferres loading of maps till required

--- a/app/assets/javascripts/support/mediaqueries.js.erb
+++ b/app/assets/javascripts/support/mediaqueries.js.erb
@@ -7,6 +7,6 @@ Modernizr.load([
     ]
   },
   {
-    load: ['<%= asset_path "enquire" %>', '<%= asset_path "init/enquire" %>']
+    load: ['<%= asset_path "enquire.js" %>', '<%= asset_path "init/enquire.js" %>'],
   }
 ]);
