--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,7 +23,7 @@
 
     <!-- Store location -->
     <div class="map-micello map-micello--static detail-view__divider">
-      <%= render partial: 'shared/map', locals: {store_id: @centre_stores.first.id, interactive: false} %>
+      <%= render partial: 'shared/map', locals: {store_id: @centre_stores.first.id, interactive: false, load_immediately: true} %>
     </div>
     <!-- //Store location -->
 
