minor fixes after rebase

--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -293,8 +293,7 @@
     bottom: 0;
 
     /* Map/list view toggling */
-    &,
-    canvas {
+    & {
       visibility: hidden !important;
 
       /* When map view is in view */
