Cleaning up IE8 Micello maps CSS

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,4 +1,4 @@
-<div class="stores-maps">
+<div class="stores-maps container">
   <h1 class="hide-visually">Stores</h1>
   <div class="map-micello">
     <%= render partial: 'shared/map', locals: {store_id: nil, interactive: true} %>
