--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -1,34 +1,41 @@
+<p class="feedback feedback--warning js-enabled-hide">You need JavaScript enabled to view this map. <a href="http://enable-javascript.com/" rel="external">Visit here</a> for instructions on how to enable JavaScript.</p>
+
 <!--[if lte IE 8]>
-  <div id="map" class="map map--ie-support <%= 'map--non-interactive' unless interactive %>">
-    <div class="zoom">
-      <div class="zoom__in">+</div>
-      <div class="zoom__out">-</div>
+  <div id="map-micello-api" class="map-micello__api map-micello-oldie js-disabled-hide">
+    <div class="map-micello-oldie__controls">
+      <em class="hide-visually">Zoom</em>
+      <ul class="map-micello-oldie__controls__zoom" id="ui-zoom">
+        <li><button type="button" class="map-micello-oldie__controls__zoom__in btn">+</button></li>
+        <li><button type="button" class="map-micello-oldie__controls__zoom__out btn">-</button></li>
+      </ul>
+      <em class="hide-visually">Floor levels</em>
+      <ul class="map-micello-oldie__controls__levels" id="ui-levels">
+        <% (1..@centre.number_of_levels).to_a.reverse.each do |level| %>
+          <li><button type="button" class="btn" data-level="<%= level %>"><%= level %></button></li>
+        <% end %>
+      </ul>
     </div>
-    <div class="level-select">
-      <% (1..@centre.number_of_levels).to_a.reverse.each do |level| %>
-        <div class="level-select__level" data-level="<%= level %>"><%= level %></div>
-      <% end %>
-    </div>
-    <div class="container">
-      <% (1..@centre.number_of_levels).each do |level| %>
-        <img class="hidden" data-level="<%= level %>" src="<%= image_path("centre/#{@centre.micello_community}_#{level}.png") %>"/>
-      <% end %>
-    </div>
+    <% (1..@centre.number_of_levels).each do |level| %>
+      <img class="map-micello-oldie__map-img hide-fully" data-level="<%= level %>" src="<%= image_path("centre/#{@centre.micello_community}_#{level}.png") %>" alt="Map of shopping centre level <%= level %>">
+    <% end %>
   </div>
 <![endif]-->
+
 <!--[if gt IE 8]><!-->
-	<p class="feedback feedback--warning js-enabled-hide">You need JavaScript enabled to view this map. <a href="http://enable-javascript.com/" rel="external">Visit here</a> for instructions on how to enable JavaScript.</p>
-  <div id="map" class="map-micello__api js-disabled-hide"><span class="preloader preloader--light"><span class="preloader__spinner"></span><em class="hide-visually">Loading, please wait&#8230;</em></span></div>
+  <div id="map-micello-api" class="map-micello__api js-disabled-hide">
+    <span class="preloader preloader--light"><span class="preloader__spinner"></span><em class="hide-visually">Loading, please wait&#8230;</em></span>
+  </div>
   <div class="map-micello__overlay-wrap">
     <%= render partial: 'shared/micello_map_popup' %>
   </div>
 <!--<![endif]-->
+
 <% content_for :javascript do %>
   <%= javascript_tag do %>
     (function initMaps() {
 
       function supported() {
-        return !$('#map').hasClass('map--ie-support');
+        return !$('#map-micello-api').hasClass('map-micello-oldie');
       }
 
       function createMap() {
