--- a/app/views/layouts/_tile.html.erb
+++ b/app/views/layouts/_tile.html.erb
@@ -1,6 +1,6 @@
 <article class="tile tile--<%= result.kind.pluralize %> box" role="article">
   <em class="hide-visually"><%= result.kind %></em>
-  <%= link_to yield, tile_url(@centre, result) %>
+  <%= link_to yield, tile_url(@centre, result), target: "_self" %>
   <div class="tile__controls">
     <%= render "/shared/social_share",
       url: tile_url(@centre, result),
