--- a/app/assets/stylesheets/partials/modules/_pill.scss
+++ b/app/assets/stylesheets/partials/modules/_pill.scss
@@ -12,9 +12,12 @@
 
 .pill {
   @include to-rem(padding, $spacing-quarter);
-  border-radius: 3px;
+  border-radius: $border-radius;
   background-color: #fff;
   box-shadow: 0 1px 2px rgba(#000, 0.25);
 }
 
-.pill--spacing {margin: to-em($spacing-base);}
+.pill--spacing {
+  margin-left: to-em($spacing-base);
+  margin-right: to-em($spacing-base);
+}
