--- a/app/views/layouts/detail_view.html.erb
+++ b/app/views/layouts/detail_view.html.erb
@@ -1,4 +1,5 @@
 <% content_for :class_for_body, "page-detail-view" %>
+<% content_for :class_for_main, "container--wide" %>
 
 <% if in_lightbox? %>
   <div class="page-overlay"></div>
