Tidying up css formatting for icon module and changing 'em' to 'rem' for pill module

--- a/app/assets/stylesheets/partials/layout/_main.scss
+++ b/app/assets/stylesheets/partials/layout/_main.scss
@@ -2,4 +2,6 @@
    @LAYOUT -> MAIN
    ====================================================================================== */
 
-.main {}
+.main {
+
+}
