--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -129,6 +129,12 @@
 /* Switch horizontal */
 .icon--switch-horizontal-full:before {content: "\e02d";}
 
+/* Ellipses horizontal */
+.icon-ellipsis-horizontal:before {content: "\f141";}
+
+/* Ellipses vertical */
+.icon-ellipsis-vertical:before {content: "\f142";}
+
 /* Arrow up */
 .icon--arrow-up:before {content: "\e018";}
 
@@ -173,14 +179,6 @@
 
 /* Arrow opposites */
 .icon--arrow-opposites:before {content: "\e007";}
-
-/* Ellipses */
-.icon-ellipsis-horizontal:before {
-    content: "\f141";
-}
-.icon-ellipsis-vertical:before {
-    content: "\f142";
-}
 
 /* --Extenders-- */
 
