--- a/app/assets/stylesheets/partials/modules/_pill.scss
+++ b/app/assets/stylesheets/partials/modules/_pill.scss
@@ -17,7 +17,5 @@
   box-shadow: 0 1px 2px rgba(#000, 0.25);
 }
 
-.pill--spacing {
-  margin-left: to-em($spacing-base);
-  margin-right: to-em($spacing-base);
-}
+/* Apply spacing both sides */
+.pill--spacing {@include to-rem(margin-left margin-right, $spacing-base);}
