minor fixes after rebase

--- a/app/assets/javascripts/map/deferred_map.js.coffee.erb
+++ b/app/assets/javascripts/map/deferred_map.js.coffee.erb
@@ -7,7 +7,7 @@ window.map = Micello: class Micello
     @deferred = @options.deferred = $.Deferred()
 
   micelloSupported: ->
-    !$('#map').hasClass('map--ie-support')
+    !$('#map-micello-api').hasClass('map-micello-oldie')
 
   load: ->
     return @initializeMap() if Micello.loadTriggered
