--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :class_for_main, "container--wide" %>
+
 <div class="stores-maps container js-stores-maps-toggle-wrap">
   <h1 class="hide-visually">Stores</h1>
 
@@ -80,7 +82,7 @@
 
                 <%# Phone no %>
                 <a href="tel:<%= store.phone_number %>" class="stores-list__data-cell__icon stores-list__data-cell__icon--phone hide-fully--non-palm">
-                  <span class="hide-visually"><%= store.phone_number %></span>
+                  <span class="hide-visually">Call store: <%= store.phone_number %></span>
                   <span class="icon icon--phone2 icon--flush-top"></span>
                 </a>
                 <%# //Phone no %>
@@ -111,63 +113,63 @@
   <div class="stores-maps__map map-micello js-stores-maps-toggle-map" id="stores-maps-toggle-map">
     <%= render partial: 'shared/map', locals: {store_id: nil, interactive: true, load_immediately: false} %>
   </div>
-  <%- content_for :javascript do -%>
-    <%= javascript_tag do %>
-      (function() {
-
-        var map = new window.map.Micello(),
-            viewingList = true;
-
-        function resetView(listView) {
-          <%# listView = [true, false, null]
-                true = list view
-                false = map view
-                null = desktop view
-          %>
-          viewingList = listView;
-
-          if(!listView) map.load();
-
-          $('.js-stores-maps-toggle-btn').toggleClass('is-expanded', listView === false); <%# toggle button        %>
-          $('.js-stores-maps-toggle-btn__txt').html(listView ? 'map' : 'list');           <%# toggle button text   %>
-          $('.stores-maps__map')[listView ? 'hide' : 'show']();                           <%# map container        %>
-          $('.stores-maps').toggleClass('is-map-view', listView === false);               <%# store list container %>
-        }
-
-        function desktopView() {
-          resetView(null);
-          $('*', document).off('.map-palm')
-          $('[data-store-id]').on('click.map-desktop', function() {
-            map.highlight($(this).data('store-id'));
-          });
-        }
-
-        function palmView() {
-          resetView(true);
-          $('*', document).off('.map-desktop')
-          $('.stores-maps__toggle').on('click.map-palm', function() {
-            resetView(!viewingList);
-          });
-          $('[data-store-id]').on('click.map-palm', 'a[href="#infoDiv"]', function(event) {
-            resetView(false);
-            map.highlight($(event.delegateTarget).data('store-id'));
-          });
-        }
-
-        Modernizr.load({
-          load: '<%= asset_path 'enquire.js' %>',
-          complete: function() {
-            enquire.register("all and (min-width: 64em)", {
-              match: desktopView,
-              unmatch: palmView,
-              setup: palmView
-            });
-          }
-        });
-
-      }());
-    <% end %>
-  <%- end -%>
   <%# //Map %>
 
 </div>
+
+<%- content_for :javascript do -%>
+  <%= javascript_tag do %>
+    (function() {
+
+      var map = new window.map.Micello(),
+          viewingList = true;
+
+      function resetView(listView) {
+        <%# listView = [true, false, null]
+              true = list view
+              false = map view
+              null = desktop view
+        %>
+        viewingList = listView;
+
+        if(!listView) map.load();
+
+        $('.js-stores-maps-toggle-btn').toggleClass('is-expanded', listView === false);   <%# toggle button        %>
+        $('.js-stores-maps-toggle-btn__txt').html(listView ? 'map' : 'list');             <%# toggle button text   %>
+        $('.js-stores-maps-toggle-wrap').toggleClass('is-map-view', listView === false);  <%# store list container %>
+      }
+
+      function desktopView() {
+        resetView(null);
+        $('*', document).off('.map-palm')
+        $('[data-store-id]').on('click.map-desktop', function() {
+          map.highlight($(this).data('store-id'));
+        });
+      }
+
+      function palmView() {
+        resetView(true);
+        $('*', document).off('.map-desktop')
+        $('.js-stores-maps-toggle-btn').on('click.map-palm', function() {
+          resetView(!viewingList);
+        });
+        $('[data-store-id]').on('click.map-palm', 'a[href="#infoDiv"]', function(event) {
+          resetView(false);
+          map.highlight($(event.delegateTarget).data('store-id'));
+        });
+      }
+
+      Modernizr.load({
+        load: '<%= asset_path 'enquire.js' %>',
+        complete: function() {
+          enquire.register("all and (min-width: 64em)", {
+            match: desktopView,
+            unmatch: palmView,
+            setup: palmView
+          });
+        }
+      });
+
+    }());
+  <% end %>
+<%- end -%>
